# meridian-job-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  ELEGANT_JOB_TRACKER_PROJECT.md  ELEGANT_RESUME_PLATFORM_PROJECT.md  ELEGANT_SOFTWARE_SOLUTIONS_PROJECT.md  LICENSE  MERIDIAN_LINKEDIN_MCP_PROJECT.md  README.md  SOUNDWAVE_EMAIL_AGENT_PROJECT.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_decline_reasons.py  003_work_location_type.py  004_job_contacts.py  005_compensation_fields.py  006_is_easy_apply.py  007_user_preference_flags.py  008_location_compatible.py  009_structured_notes.py  010_cover_letter_rag.py
backend/scripts/: __init__.py  analyze_all_jobs.py  bulk_add_easy_apply.py  reprocess_easy_apply.py  seed_resume_data.py
backend/src/: __init__.py  cli.py  main.py
backend/src/api/: __init__.py  deps.py
backend/src/automation/: __init__.py  browser.py  linkedin_apply.py
backend/src/config/: __init__.py  database.py  logging.py  settings.py
backend/src/middleware/: __init__.py  error_handler.py  rate_limit.py
backend/src/models/: __init__.py  agent.py  application_attempt.py  cover_letter.py  decline_reason.py  email.py  job.py  job_contact.py  webhook.py
backend/src/schemas/: __init__.py  agent.py  (+10 more)
backend/tests/: __init__.py  conftest.py  test_agents_webhooks.py  test_ai_analysis.py  test_batch_analyze.py  test_cover_letters.py  test_decline_reasons.py  test_emails.py  test_integration.py  test_job_scraper.py  test_jobs.py  test_location_service.py
(+104 files in other folders)
